# ipynb-proj-setup

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  pytest.ini  setup.sh  update.sh
.github/workflows/: ci.yaml
my_project/: config.yaml  main.ipynb  main.py  my_project.ipynb
my_project/classroom/: classroom.py
my_project/my_functions/: my_functions.py
my_project/service/: service.py
my_project/shapes/: shapes.py
tests/: conftest.py  test_circle.py  test_classroom.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
